pico-web/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pico-web
  labels:
    app: pico-web
spec:
  selector:
    matchLabels:
      app: pico-web
  replicas: 1
  template:
    metadata:
      labels:
        app: pico-web
    spec:
      containers:
        - name: pico-web
          image: pico-web
          ports:
            - name: http
              containerPort: 80
