pico-web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pico-web
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
spec:
  rules:
    - host: pico-web.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pico-web
                port:
                  number: 80
  tls:
    - hosts:
        - pico-web.example.com
      secretName: pico-web-tls
